# czkawka

./: Changelog.md  compile.sh  run.sh  run_gui.sh
cedinia/src/: scanners.rs
czkawka_cli/: Cargo.toml
czkawka_cli/src/: commands.rs  main.rs
czkawka_core/: Cargo.toml
czkawka_core/src/common/: cache.rs  image.rs  items.rs
czkawka_core/src/tools/duplicate/: core.rs
czkawka_core/src/tools/similar_images/: core.rs  mod.rs  tests.rs  traits.rs
czkawka_gui/: Cargo.toml  build.rs
czkawka_gui/i18n/en/: czkawka_gui.ftl
czkawka_gui/i18n/zh-CN/: czkawka_gui.ftl
czkawka_gui/i18n/zh-TW/: czkawka_gui.ftl
czkawka_gui/src/: compute_results.rs  file_protection.rs  gtk_traits.rs  help_combo_box.rs  help_drop_down.rs  help_functions.rs  initialize_gui.rs  main.rs  notebook_enums.rs  notebook_info.rs  opening_selecting_records.rs  saving_loading.rs
czkawka_gui/src/connect_things/: connect_button_compare.rs  connect_button_delete.rs  connect_button_hardlink.rs  connect_button_move.rs  connect_button_search.rs  connect_button_select.rs  connect_change_language.rs  connect_duplicate_buttons.rs  connect_file_protection.rs  connect_krokiet_info_dialog.rs  connect_popovers_select.rs  connect_popovers_sort.rs  connect_same_music_mode_changed.rs  connect_selection_of_directories.rs  connect_settings.rs  connect_similar_image_mutual_exclusion.rs  connect_similar_image_size_change.rs  file_chooser_helpers.rs  mod.rs
czkawka_gui/src/gui_structs/: common_tree_view.rs  duplicate_row.rs  gui_about.rs  gui_bottom_buttons.rs  gui_data.rs  gui_main_notebook.rs  gui_popovers_select.rs  gui_progress_dialog.rs  gui_settings.rs  mod.rs  simple_row.rs
czkawka_gui/src/helpers/: async_dialog.rs  enums.rs  image_operations.rs  list_store_operations.rs  mod.rs
czkawka_gui/ui/: about_dialog.ui  compare_images.ui  main_window.ui  popover_right_click.ui  popover_select.ui  popover_sort.ui  progress.ui  settings.ui
krokiet/: Cargo.toml
krokiet/i18n/pl/: krokiet.ftl
krokiet/i18n/zh-CN/: krokiet.ftl
krokiet/src/: main.rs
krokiet/src/connect_scan/: similar_images.rs
krokiet/src/connect_select/: mod.rs
krokiet/src/file_actions/: connect_delete.rs  connect_move.rs
krokiet/src/file_protection/: connect.rs  mod.rs
krokiet/src/settings/: combo_box.rs  mod.rs  model.rs
krokiet/ui/: action_buttons.slint  callabler.slint  color_palette.slint  gui_state.slint  main_window.slint  settings.slint  settings_list.slint  tool_settings.slint  translations.slint
scripts/: build.sh  run.sh
