[package]
name = "czkawka_cli"
version = "11.0.1"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.92.0"
description = "CLI frontend of Czkawka"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap.git", features = ["derive", "color"] }

log = { git = "https://github.com/rust-lang/log.git" }
czkawka_core = { path = "../czkawka_core", version = "11.0.1", features = [] }
indicatif = { git = "https://github.com/console-rs/indicatif.git" }
crossbeam-channel = { git = "https://github.com/crossbeam-rs/crossbeam.git", features = [] }
ctrlc = { version = "3.5", features = ["termination"] }
humansize = { git = "https://github.com/LeopoldArkham/humansize.git" }

[features]
default = []
heif = ["czkawka_core/heif"]
libraw = ["czkawka_core/libraw"]
libavif = ["czkawka_core/libavif"]
# Allows to use trash on Linux when using xdg-portal, needed by e.g. flatpak where normal trash access always fails
# No-op on other OSes, it is slower and provides less helpful error messages
xdg_portal_trash = ["czkawka_core/xdg_portal_trash"]

no_colors = []

[lints]
workspace = true
