[package]
name = "czkawka_core"
version = "11.0.1"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.92.0"
description = "Core of Czkawka app"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"
build = "build.rs"

[dependencies]
humansize = { git = "https://github.com/LeopoldArkham/humansize.git" }
rayon = "1.11"
crossbeam-channel = { git = "https://github.com/crossbeam-rs/crossbeam.git" }

# For stable iteration over hashmaps.
indexmap = { git = "https://github.com/indexmap-rs/indexmap.git" }

# For saving/loading config files to specific directories
directories-next = "2.0"

# Needed by similar images
image_hasher = { version = "3.1", features = ["fast_resize_unstable"] }
bk-tree = "0.5"
image = { git = "https://github.com/image-rs/image.git", default-features = false, features = ["bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp", "rayon"] }
hamming-bitwise-fast = "1.0"

# Needed by same music
bitflags = { git = "https://github.com/bitflags/bitflags.git" }
lofty = { git = "https://github.com/Serial-ATA/lofty-rs.git" }

# Needed by broken files
zip = { git = "https://github.com/zip-rs/zip2.git", features = ["aes-crypto", "bzip2", "deflate", "time"], default-features = false }
lopdf = { git = "https://github.com/J-F-Liu/lopdf.git" }

# Needed by audio similarity feature
rusty-chromaprint = "0.3"
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", features = ["all"] }

# Hashes for duplicate files
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3.git" }
crc32fast = { git = "https://github.com/srijs/rust-crc32fast.git" }
xxhash-rust = { git = "https://github.com/DoumanAsh/xxhash-rust.git", features = ["xxh3"] }

tempfile = { git = "https://github.com/Stebalien/tempfile.git" }

# Video Duplicates
vid_dup_finder_lib = "0.4"
filetime = { git = "https://github.com/alexcrichton/filetime.git" }

# For extracting video properties using ffprobe CLI
# https://github.com/theduke/ffprobe-rs/issues/33
#ffprobe = "0.4.0"

# Saving/Loading Cache
serde = { git = "https://github.com/serde-rs/serde.git" }
bincode = "<2.0"
serde_json = { git = "https://github.com/serde-rs/json.git" }

# Language
i18n-embed = { git = "https://github.com/kellpossible/cargo-i18n.git", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = { git = "https://github.com/kellpossible/cargo-i18n.git" }
rust-embed = { git = "https://github.com/pyrossh/rust-embed.git", features = ["debug-embed"] }
once_cell = { git = "https://github.com/matklad/once_cell.git" }

# Raw image files
rawler = { git = "https://github.com/dnglab/dnglab.git" }
libraw-rs = { version = "0.0.4", optional = true }
jxl-oxide = { git = "https://github.com/tirr-c/jxl-oxide.git", features = ["image"] }

# Checking for invalid extensions
mime_guess = { git = "https://github.com/abonander/mime_guess.git" }
infer = { git = "https://github.com/bojand/infer.git" }

# Newer version of libheif-rs, which is not compatible with Ubuntu 22.04, and works only o
libheif-rs = { git = "https://github.com/Cykooz/libheif-rs.git", optional = true, default-features = false, features = ["v1_17", "image"] }

nom-exif = { git = "https://github.com/mindeng/nom-exif.git" }

# EXIF data cleaning
little_exif = { git = "https://github.com/TechnikTobi/little_exif.git" }

dunce = "1.0.5"

os_info = { version = "3", default-features = false }
log = { git = "https://github.com/rust-lang/log.git" }
handsome_logger = "0.9"
fun_time = { version = "0.3", features = ["log"] }
itertools = { git = "https://github.com/rust-itertools/itertools.git" }
static_assertions = "1.1.0"
file-rotate = { git = "https://github.com/BourgondAries/file-rotate.git" }

open = { git = "https://github.com/Byron/open-rs.git" }

log-panics = { git = "https://github.com/sfackler/rust-log-panics.git", features = ["with-backtrace"] }
deunicode = "1.6.2"
glibc_musl_version = "0.1.0"

rand = { git = "https://github.com/rust-random/rand.git" }

ashpd = { git = "https://github.com/bilelmoussaoui/ashpd.git", optional = true, features = ["trash"] }
tokio = { git = "https://github.com/tokio-rs/tokio.git", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
trash = { git = "https://github.com/Byron/trash-rs.git" }

[target.'cfg(windows)'.dependencies]
file-id = "0.2.3"

[build-dependencies]
rustc_version = "0.4"
glibc_musl_version = "0.1.0"

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = [] }

[[bench]]
name = "hash_calculation_benchmark"
harness = false

[features]
default = []
heif = ["dep:libheif-rs"]
libraw = ["dep:libraw-rs"]
libavif = ["image/avif-native", "image/avif"]
blake_pure = ["blake3/pure"]
# Allows to use trash on Linux when using xdg-portal, needed by e.g. flatpak where normal trash access always fails
# No-op on other OSes, it is slower and provides less helpful error messages
xdg_portal_trash = ["ashpd", "tokio"]
[lints]
workspace = true
