[package]
name = "czkawka_gui"
version = "11.0.1"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.92.0"
description = "GTK frontend of Czkawka"
license = "MIT"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"

[dependencies]
gdk4 = { git = "https://github.com/gtk-rs/gtk4-rs.git", default-features = false, features = ["v4_20"] }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git" }
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs.git", default-features = false, features = ["v4_20"] }

humansize = { git = "https://github.com/LeopoldArkham/humansize.git" }
chrono = { git = "https://github.com/chronotope/chrono.git" }
crossbeam-channel = { git = "https://github.com/crossbeam-rs/crossbeam.git" }
directories-next = "2.0"
open = { git = "https://github.com/Byron/open-rs.git" }
image = { git = "https://github.com/image-rs/image.git" }
regex = { git = "https://github.com/rust-lang/regex.git" }
fs_extra = "1.3"
dunce = "1.0.5"

i18n-embed = { git = "https://github.com/kellpossible/cargo-i18n.git", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = { git = "https://github.com/kellpossible/cargo-i18n.git" }
rust-embed = { git = "https://github.com/pyrossh/rust-embed.git", features = ["debug-embed"] }
once_cell = { git = "https://github.com/matklad/once_cell.git" }

log = { git = "https://github.com/rust-lang/log.git" }
fun_time = { version = "0.3", features = ["log"] }
rayon = "1.11"

czkawka_core = { path = "../czkawka_core", version = "11.0.1", features = [] }

resvg = { git = "https://github.com/RazrFalcon/resvg.git", default-features = false }
serde_json = { git = "https://github.com/serde-rs/json.git" }
serde = { git = "https://github.com/serde-rs/serde.git", features = ["derive"] }
itertools = { git = "https://github.com/rust-itertools/itertools.git" }
rand = { git = "https://github.com/rust-random/rand.git" }
futures-channel = { git = "https://github.com/rust-lang/futures-rs.git" }

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["combaseapi", "objbase", "shobjidl_core", "windef", "winerror", "wtypesbase", "winuser"] }

[build-dependencies]
winresource = "0.1"

[features]
default = []
heif = ["czkawka_core/heif"]
libraw = ["czkawka_core/libraw"]
libavif = ["czkawka_core/libavif"]
# Allows to use trash on Linux when using xdg-portal, needed by e.g. flatpak where normal trash access always fails
# No-op on other OSes, it is slower and provides less helpful error messages
xdg_portal_trash = ["czkawka_core/xdg_portal_trash"]
add_windows_icon = []

[lints]
workspace = true
