[package]
name = "krokiet"
version = "11.0.1"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
edition = "2024"
rust-version = "1.92.0"
description = "Slint frontend of Czkawka Core"
license = "GPL-3.0-only"
homepage = "https://github.com/qarmin/czkawka"
repository = "https://github.com/qarmin/czkawka"
build = "build.rs"

[dependencies]
czkawka_core = { version = "11.0.1", path = "../czkawka_core" }
chrono = { git = "https://github.com/chronotope/chrono.git" }
open = { git = "https://github.com/Byron/open-rs.git" }
crossbeam-channel = { git = "https://github.com/crossbeam-rs/crossbeam.git" }
rfd = { git = "https://github.com/PolyMeilex/rfd.git", default-features = false, features = ["xdg-portal"] }
home = "0.5"
log = { git = "https://github.com/rust-lang/log.git" }
serde = { git = "https://github.com/serde-rs/serde.git" }
serde_json = { git = "https://github.com/serde-rs/json.git" }
humansize = { git = "https://github.com/LeopoldArkham/humansize.git" }
image = { git = "https://github.com/image-rs/image.git" }
rayon = "1.11"
fs_extra = "1.3" # TODO replace with less buggy library
fast_image_resize = { git = "https://github.com/Cykooz/fast_image_resize.git", features = ["image"] }
num_enum = { git = "https://github.com/illicitonion/num_enum.git" }
regex = { git = "https://github.com/rust-lang/regex.git" }

# Translations
i18n-embed = { git = "https://github.com/kellpossible/cargo-i18n.git", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = { git = "https://github.com/kellpossible/cargo-i18n.git" }
rust-embed = { git = "https://github.com/pyrossh/rust-embed.git", features = ["debug-embed"] }


# Easier cross-compilation of app to e.g. 32 bit os, by using dlopen instead of linking libraries at compile time
fontique = { git = "https://github.com/linebender/parley.git", default-features = false, features = ["fontconfig-dlopen"] }

# Try to use only needed features from https://github.com/slint-ui/slint/blob/master/api/rs/slint/Cargo.toml#L23-L31
#slint = { path = "/home/rafal/test/slint/api/rs/slint/", default-features = false, features = ["std",
#slint = { git = "https://github.com/slint-ui/slint.git", default-features = false, features = [
slint = { git = "https://github.com/slint-ui/slint.git", default-features = false, features = [
    "std",
    "backend-winit",
    "compat-1-2"
] }

rodio = { git = "https://github.com/RustAudio/rodio.git", default-features = false, features = ["playback", "symphonia-all"], optional = true }

[build-dependencies]
#slint-build = { path = "/home/rafal/test/slint/api/rs/build/"}
#slint-build = { git = "https://github.com/slint-ui/slint.git" }
slint-build = { git = "https://github.com/slint-ui/slint.git" }
winresource = "0.1"

[features]
default = ["winit_femtovg", "winit_software"]

# Audio support
audio = ["rodio"]

# Bundles windows icon into executable
add_windows_icon = []

# Renderers
skia_opengl = ["slint/renderer-skia-opengl"]
skia_vulkan = ["slint/renderer-skia-vulkan"]
software = ["slint/renderer-software"]
femtovg = ["slint/renderer-femtovg"]
femtovg_wgpu = ["slint/renderer-femtovg-wgpu"]
winit_femtovg = ["slint/renderer-winit-femtovg"]
winit_skia_opengl = ["slint/renderer-winit-skia-opengl"]
winit_skia_vulkan = ["slint/renderer-winit-skia-vulkan"]
winit_software = ["slint/renderer-winit-software"]

# Additional features
heif = ["czkawka_core/heif"]
libraw = ["czkawka_core/libraw"]
libavif = ["czkawka_core/libavif"]

# Allows to use trash on Linux when using xdg-portal, needed by e.g. flatpak where normal trash access always fails
# No-op on other OSes, it is slower and provides less helpful error messages
xdg_portal_trash = ["czkawka_core/xdg_portal_trash"]

[lints]
workspace = true
